# backend/src/routes/routes.ts
@@ -97,11 +97,6 @@ const models: TsoaRoute.Models = {
         "additionalProperties": true,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "Partial_IListing_": {
-        "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"propertyData":{"ref":"IProperty"},"images":{"dataType":"array","array":{"dataType":"string"}},"type":{"ref":"ListingType"},"price":{"dataType":"double"}},"validators":{}},
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "userTypes": {
         "dataType": "refEnum",
         "enums": ["user","broker"],
@@ -256,14 +251,14 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.patch('/listing/:id',
+        app.put('/listing/:id',
             authenticateMiddleware([{"jwt":["broker"]}]),
             ...(fetchMiddlewares<RequestHandler>(ListingController)),
-            ...(fetchMiddlewares<RequestHandler>(ListingController.prototype.patch)),
+            ...(fetchMiddlewares<RequestHandler>(ListingController.prototype.put)),
 
-            async function ListingController_patch(request: ExRequest, response: ExResponse, next: any) {
+            async function ListingController_put(request: ExRequest, response: ExResponse, next: any) {
             const args: Record<string, TsoaRoute.ParameterSchema> = {
-                    requestBody: {"in":"body","name":"requestBody","required":true,"ref":"Partial_IListing_"},
+                    requestBody: {"in":"body","name":"requestBody","required":true,"ref":"IListing"},
                     id: {"in":"path","name":"id","required":true,"dataType":"double"},
                     req: {"in":"request","name":"req","required":true,"dataType":"object"},
             };
@@ -277,7 +272,7 @@ export function RegisterRoutes(app: Router) {
                 const controller = new ListingController();
 
               await templateService.apiHandler({
-                methodName: 'patch',
+                methodName: 'put',
                 controller,
                 response,
                 next,
